added food entry code

--- a/Dateadd_OlderStuff/appsettings.json
+++ b/Dateadd_OlderStuff/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": { "MyDatabaseConnection": "mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=falses" },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
