--- a/Dateadd_OlderStuff/Dateadd_OlderStuff.csproj
+++ b/Dateadd_OlderStuff/Dateadd_OlderStuff.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DnsClient" Version="1.6.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
